# mic-kbs-game

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: compile-test.yml
cmake-files/: extratargets-avr.cmake  toolchain-avr.cmake
src/: global_vars.h  main.cpp  monster_moves.h
src/Battle/: Battle.cpp  Battle.h
src/Display/: Display.cpp  Display.h
src/Infrared/: Infrared.cpp  Infrared.h
src/Menu/: Menu.cpp  Menu.h
src/Monster/: Monster.cpp  Monster.h  Move.cpp  Move.h  monster_moves.cpp  monster_moves.h  sprites.h
src/Nunchuck/: Nunchuck.cpp  Nunchuck.h
src/PersistentStorage/: PersistentStorage.cpp  PersistentStorage.h
src/PotMeter/: PotMeter.cpp  PotMeter.h
src/SegmentDisplay/: SegmentDisplay.cpp  SegmentDisplay.h
src/SuperCounter/: SuperCounter.cpp  SuperCounter.h
src/sprites/: font.h  slime.h  test.h
